Bug fix with spacing

--- a/_base.settings.scss
+++ b/_base.settings.scss
@@ -1,5 +1,5 @@
 // Spacing
-$flexdd-base-spacing-unit: 24 !default;
+$flexdd-base-spacing-unit: 24px !default;
 $flexdd-half-spacing-unit: $flexdd-base-spacing-unit / 2 !default;
 $flexdd-double-spacing-unit: $flexdd-base-spacing-unit * 2 !default;
 
